// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapHTTPRouterWithSwaggerUI should be bypassed with no debug env 1`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "MAX_HEADERS_COUNT",
    ],
    Array [
      "KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "TIMEOUT",
    ],
    Array [
      "MAX_CONNECTIONS",
    ],
    Array [
      "PROCESS_NAME",
    ],
    Array [
      "SIGNALS",
    ],
    Array [
      "BUFFER_LIMIT",
    ],
    Array [
      "PARSERS",
    ],
    Array [
      "STRINGIFYERS",
    ],
    Array [
      "DECODERS",
    ],
    Array [
      "ENCODERS",
    ],
    Array [
      "QUERY_PARSER",
    ],
    Array [
      "TRANSACTIONS",
    ],
    Array [
      "uniqueId",
    ],
  ],
  "debugCalls": Array [
    Array [
      "Logging service initialized.",
    ],
    Array [
      "Delay service initialized.",
    ],
    Array [
      "Running in \\"test\\" environment.",
    ],
    Array [
      "Process service initialized.",
    ],
    Array [
      "💱 - HTTP Transaction initialized.",
    ],
    Array [
      "🚦 - HTTP Router initialized.",
    ],
    Array [
      "✅ - Closing HTTP server.",
    ],
    Array [
      "✔️ - HTTP server closed!",
    ],
    Array [
      "Cancelling pending timeouts:",
      0,
    ],
  ],
  "logErrorCalls": Array [
    Array [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": Array [
    Array [
      "🎙️ - HTTP Server listening at \\"http://localhost:8889\\".",
    ],
  ],
}
`;

exports[`wrapHTTPRouterWithSwaggerUI should serve Swagger HTML 1`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "MAX_HEADERS_COUNT",
    ],
    Array [
      "KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "TIMEOUT",
    ],
    Array [
      "MAX_CONNECTIONS",
    ],
    Array [
      "PROCESS_NAME",
    ],
    Array [
      "SIGNALS",
    ],
    Array [
      "BUFFER_LIMIT",
    ],
    Array [
      "PARSERS",
    ],
    Array [
      "STRINGIFYERS",
    ],
    Array [
      "DECODERS",
    ],
    Array [
      "ENCODERS",
    ],
    Array [
      "QUERY_PARSER",
    ],
    Array [
      "TRANSACTIONS",
    ],
    Array [
      "uniqueId",
    ],
  ],
  "data": "<!-- HTML for static distribution bundle build -->
<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\">
    <title>Swagger UI</title>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"./swagger-ui.css\\" >
    <link rel=\\"icon\\" type=\\"image/png\\" href=\\"./favicon-32x32.png\\" sizes=\\"32x32\\" />
    <link rel=\\"icon\\" type=\\"image/png\\" href=\\"./favicon-16x16.png\\" sizes=\\"16x16\\" />
    <style>
      html
      {
        box-sizing: border-box;
        overflow: -moz-scrollbars-vertical;
        overflow-y: scroll;
      }

      *,
      *:before,
      *:after
      {
        box-sizing: inherit;
      }

      body
      {
        margin:0;
        background: #fafafa;
      }
    </style>
  </head>

  <body>
    <div id=\\"swagger-ui\\"></div>

    <script src=\\"./swagger-ui-bundle.js\\"> </script>
    <script src=\\"./swagger-ui-standalone-preset.js\\"> </script>
    <script>
    window.onload = function() {
      // Begin Swagger UI call region
      const ui = SwaggerUIBundle({
        url: \\"https://petstore.swagger.io/v2/swagger.json\\",
        dom_id: '#swagger-ui',
        deepLinking: true,
        presets: [
          SwaggerUIBundle.presets.apis,
          SwaggerUIStandalonePreset
        ],
        plugins: [
          SwaggerUIBundle.plugins.DownloadUrl
        ],
        layout: \\"StandaloneLayout\\"
      })
      // End Swagger UI call region

      window.ui = ui
    }
  </script>
  </body>
</html>
",
  "debugCalls": Array [
    Array [
      "Logging service initialized.",
    ],
    Array [
      "Delay service initialized.",
    ],
    Array [
      "Running in \\"test\\" environment.",
    ],
    Array [
      "Process service initialized.",
    ],
    Array [
      "💱 - HTTP Transaction initialized.",
    ],
    Array [
      "🚦 - HTTP Router initialized.",
    ],
    Array [
      "✅ - Closing HTTP server.",
    ],
    Array [
      "✔️ - HTTP server closed!",
    ],
    Array [
      "Cancelling pending timeouts:",
      0,
    ],
  ],
  "headers": Object {
    "cache-control": "max-age=3600",
    "connection": "close",
    "content-length": "1424",
    "content-type": "text/html; charset=UTF-8",
    "date": undefined,
    "etag": undefined,
    "last-modified": undefined,
    "server": undefined,
  },
  "logErrorCalls": Array [
    Array [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": Array [
    Array [
      "💁 - Serving the API docs: http://localhost:8890/docs?url=http%3A%2F%2Flocalhost%3A8890%2Fv1%2FopenAPI",
    ],
    Array [
      "🎙️ - HTTP Server listening at \\"http://localhost:8890\\".",
    ],
  ],
  "status": 200,
}
`;

exports[`wrapHTTPRouterWithSwaggerUI should work 1`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "MAX_HEADERS_COUNT",
    ],
    Array [
      "KEEP_ALIVE_TIMEOUT",
    ],
    Array [
      "TIMEOUT",
    ],
    Array [
      "MAX_CONNECTIONS",
    ],
    Array [
      "PROCESS_NAME",
    ],
    Array [
      "SIGNALS",
    ],
    Array [
      "BUFFER_LIMIT",
    ],
    Array [
      "PARSERS",
    ],
    Array [
      "STRINGIFYERS",
    ],
    Array [
      "DECODERS",
    ],
    Array [
      "ENCODERS",
    ],
    Array [
      "QUERY_PARSER",
    ],
    Array [
      "TRANSACTIONS",
    ],
    Array [
      "uniqueId",
    ],
  ],
  "data": Object {
    "ping": "pong",
  },
  "debugCalls": Array [
    Array [
      "Logging service initialized.",
    ],
    Array [
      "Delay service initialized.",
    ],
    Array [
      "Running in \\"test\\" environment.",
    ],
    Array [
      "Process service initialized.",
    ],
    Array [
      "💱 - HTTP Transaction initialized.",
    ],
    Array [
      "🚦 - HTTP Router initialized.",
    ],
    Array [
      "Created a delay:",
      30000,
    ],
    Array [
      "Cleared a delay",
    ],
    Array [
      "✅ - Closing HTTP server.",
    ],
    Array [
      "✔️ - HTTP server closed!",
    ],
    Array [
      "Cancelling pending timeouts:",
      0,
    ],
  ],
  "headers": Object {
    "connection": "close",
    "content-type": "application/json",
    "date": undefined,
    "etag": undefined,
    "last-modified": undefined,
    "server": undefined,
    "transaction-id": "0",
    "transfer-encoding": "chunked",
  },
  "logErrorCalls": Array [
    Array [
      "On air 🚀🌕",
    ],
    Array [
      "Undocumented response:",
      200,
      Object {
        "consumes": Array [
          "application/json",
        ],
        "method": "get",
        "operationId": "getPing",
        "path": "/ping",
        "produces": Array [
          "application/json",
        ],
        "responses": Object {
          "200": Object {
            "description": "Pong",
          },
        },
        "summary": "Checks API's availability.",
      },
    ],
  ],
  "logInfoCalls": Array [
    Array [
      "💁 - Serving the API docs: http://localhost:8888/docs?url=http%3A%2F%2Flocalhost%3A8888%2Fv1%2FopenAPI",
    ],
    Array [
      "🎙️ - HTTP Server listening at \\"http://localhost:8888\\".",
    ],
    Array [
      Object {
        "endInBytes": 135,
        "endOutBytes": 179,
        "endTime": 1267833600000,
        "errored": false,
        "id": "0",
        "ip": "127.0.0.1",
        "method": "GET",
        "protocol": "http",
        "reqHeaders": Object {
          "accept": "application/json, text/plain, */*",
          "connection": "close",
          "host": "localhost:8888",
          "user-agent": "axios/0.18.0",
        },
        "resHeaders": Object {
          "content-type": "application/json",
        },
        "startInBytes": 135,
        "startOutBytes": 0,
        "startTime": 1267833600000,
        "statusCode": 200,
        "url": "/v1/ping",
      },
    ],
  ],
  "status": 200,
}
`;
